# Fusion

./: CMakeLists.txt  opifex.json
Assets/Models/: human.opm  turret.opm  wall.opm
CMake/: application.cmake
Game/inc/: GameState.h  MeshRenderer.h
Game/src/: GameState.cpp  Main.cpp  MeshRenderer.cpp
src/: Main.cpp
